# bz-cli

./: .gitignore  404.html  DOCUMENTATION_PLAN.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  ci.yml  docs.yml  release.yml  tests.yaml
about/: index.html
bz/: __init__.py  cli.py  core.py
bz/metrics/: __init__.py
bz/plugins/: __init__.py
developer-guide/: index.html
docs/: about.md  developer-guide.md  getting-started.md  index.md  plugin_packaging_strategy.md  reference.md  usage.md  user-guide.md
docs/css/: custom.css
docs/examples/: basic.md  plugins.md
docs/js/: copy-codeblock.js
docs/stylesheets/: extra.css
examples/: .gitignore  README.md  bz_config.json  config.json  model.py  optuna_config.json  train.py
examples/custom-plugin/: README.md  custom_logger_plugin.py  pyproject.toml.example  simple_plugin_example.py
examples/fashion-mnist/: README.md  bzconfig.json  model.py  train.py
getting-started/: index.html
search/: search_index.json
src/bz/: __init__.py  cli.py  config.py  health.py
src/bz/metrics/: __init__.py  accuracy.py  f1_score.py  mean_absolute_error.py  mean_squared_error.py  metric.py  precision.py  recall.py  top_k_accuracy.py
src/bz/plugins/: __init__.py  console_out.py  early_stopping.py  optuna.py  plugin.py  profiler.py  tensorboard.py  wandb.py
src/bz_optuna/: __init__.py  optuna_plugin.py
src/bz_profiler/: __init__.py  profiler_plugin.py
src/bz_tensorboard/: __init__.py  tensorboard_plugin.py
src/bz_wandb/: __init__.py  wandb_plugin.py
tests/: __init__.py  test_cli.py  test_config.py  test_health.py  test_metrics.py  test_plugins.py  test_trainer.py
tests/bz/: test_config.py  test_trainer.py
tests/bz/metrics/: __init__.py  test_accuracy.py  test_f1_score.py  test_mean_absolute_error.py  test_precision.py  test_recall.py  test_registry.py  test_top_k_accuracy.py
tests/bz/plugins/: test_console_out.py  test_early_stopping.py  test_registry.py
tests/bz_optuna/: __init__.py  test_optuna.py
tests/bz_profiler/: __init__.py  test_profiler_plugin.py
tests/bz_tensorboard/: __init__.py  test_tensorboard.py
tests/bz_wandb/: __init__.py  test_wandb_plugin.py
tests/metrics/: test_mean_squared_error.py  test_metric.py
tests/plugins/: __init__.py  test_early_stopping.py  test_optuna.py  test_plugin.py  test_registry.py  test_tensorboard.py
user-guide/: index.html
