[project]
name = "bz-cli"
version = "0.1.0"
description = "A tool for reproducible and efficient training of AI models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "ipython",
]

[project.scripts]
bz = "bz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bz"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-tqdm>=4.67.0.20250809",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
