[project]
name = "bz-cli"
version = "0.1.0"
description = "A tool for reproducible and efficient training of AI models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "psutil>=5.9.0",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "ipython",
]

[project.scripts]
bz = "bz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bz"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "types-tqdm>=4.67.0.20250809",
    "pymdown-extensions>=10.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "black>=25.1.0",
    "mypy>=1.17.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
